--- a/src/HabitRPG.QuickToDo/View/MainWindow.xaml
+++ b/src/HabitRPG.QuickToDo/View/MainWindow.xaml
@@ -1,4 +1,5 @@
 ﻿<Window x:Class="HabitRPG.QuickToDo.View.MainWindow"
+        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="HabitRPG New To-Do" 
@@ -11,7 +12,11 @@
         ResizeMode="NoResize"
         FocusManager.FocusedElement="{Binding ElementName=TbTodo}" 
         MouseDown="WindowMouseDown">
-
+  <i:Interaction.Triggers>
+    <i:EventTrigger EventName="Loaded">
+      <i:InvokeCommandAction Command="{Binding WindowLoadedCommand}" />
+    </i:EventTrigger>
+  </i:Interaction.Triggers>
   <Window.Resources>
     <ControlTemplate x:Key="AddButtonControlTemplate" TargetType="{x:Type Button}">
       <Grid>
