--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@
 @media (min-width: 768px) {
   .container {
     max-width: 730px;
+    margin-bottom: 10px;
   }
 }
 .container-narrow > hr {
@@ -30,7 +31,28 @@
     padding-right: 0;
     padding-left: 0;
   }
+
   .header {
     margin-bottom: 30px;
   }
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+}
+ 
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.img-circle {
+      width: 120px;
 }
